--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
 Index
@@ -14,9 +15,13 @@ Index
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello World!</h1>
+    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
 </div>
 <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
 <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+{{ wtf.quick_form(form) }}
+<!-- <form method="POST">
+    {{ form.hidden_tag() }} {{ form.name.label(for='my-text-field') }} {{ form.name(id='my-text-field') }} {{ form.submit(class='btn') }}
+</form> -->
 {% endblock %}
 
